--- a/team2/css/style.css
+++ b/team2/css/style.css
@@ -109,7 +109,25 @@ a:hover{
   -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
-
+@media (max-width: 991px) {
+  .team-member figcaption {
+    padding: 60px;
+    color: transparent;
+    background-color: transparent;
+    position: absolute;
+    z-index: 996;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+  height: 100%;
+  overflow: hidden;
+  visibility: hidden;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  }
+}
 .team-member figure:hover figcaption {
   visibility: visible;
   color: #fff;
@@ -156,7 +174,6 @@ a:hover{
   width:500px;
   height: 500px;
  }
-
 }
 .team-member figure img{
   width: 100%;
