--- a/team2/css/style.css
+++ b/team2/css/style.css
@@ -67,7 +67,14 @@ a:hover{
 .team-member figcaption p {
   font-size: 16px;
 }
-
+@media (max-width: 991px) {
+  .team-member figcaption p{
+    font-size: 1.5em;
+  }
+  .team-member h4{
+    font-size: 2em;
+  }
+}
 .team-member figcaption ul {
   list-style: none;
   margin: 0;
@@ -111,21 +118,7 @@ a:hover{
 }
 @media (max-width: 991px) {
   .team-member figcaption {
-    padding: 60px;
-    color: transparent;
-    background-color: transparent;
-    position: absolute;
-    z-index: 996;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-  height: 100%;
-  overflow: hidden;
-  visibility: hidden;
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
+    padding: 80px;
   }
 }
 .team-member figure:hover figcaption {
@@ -171,8 +164,8 @@ a:hover{
 
 @media (max-width: 991px) {
  .team-member figure img{
-  width:700px;
-  height: 700px;
+  width:500px;
+  height: 500px;
  }
 }
 .team-member figure img{
