--- a/team2/css/style.css
+++ b/team2/css/style.css
@@ -69,10 +69,10 @@ a:hover{
 }
 @media (max-width: 991px) {
   .team-member figcaption p{
-    font-size: 1.5em;
+    font-size: 30px;
   }
   .team-member h4{
-    font-size: 2em;
+    font-size: 40px;
   }
 }
 .team-member figcaption ul {
