--- a/css/main.css
+++ b/css/main.css
@@ -1791,7 +1791,7 @@ h1, h2, h3, h4, h5, h6 {
   @media (max-width: 767px) {
     #mobile-nav-toggle {
       top: 22px;
-      margin-left: 60px; } }
+       } }
 
 #mobile-nav-toggle i {
   color: black;
