--- a/team2/css/style.css
+++ b/team2/css/style.css
@@ -193,11 +193,19 @@ a:hover{
   font-weight: bold;
   font-size: 1.5em;
 }
+#logo ul li a{
+  color:black;
+  text-decoration: none;
+}
 @media (max-width: 960px){
   #logo ul li{
   padding: 10px;
   display: inline;
   color: black;
   font-weight: bold;
+}
+#logo img{
+  width: 85px;
+  height: 85px;
 }
 }
