--- a/team3/css/style.css
+++ b/team3/css/style.css
@@ -150,3 +150,14 @@ a:hover{
   -o-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
 }
+
+@media (max-width: 991px) {
+ .team-member figure img{
+  width:500px;
+  height: 500px;
+ }
+}
+.team-member figure img{
+  width: 100%;
+  height: 100%;
+}
