--- a/team3/css/style.css
+++ b/team3/css/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 body {
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family:UEFA Supercup;
   font-weight: 300;
   color: #999;
   background-color: #fff;
@@ -22,6 +22,7 @@ h4,
 h5,
 h6 {
   margin: 0 0 20px 0;
+  font-family: UEFA Supercup;
   text-transform: none;
   color: rgba(254, 82, 76, 1);
   font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -66,6 +67,7 @@ a:hover{
 
 .team-member figcaption p {
   font-size: 16px;
+  font-family: UEFA Supercup;
 }
 
 .team-member figcaption ul {
@@ -90,6 +92,10 @@ a:hover{
 .team-member h4 {
   margin: 10px 0 0;
   padding: 0;
+  font-family: UEFA Supercup;
+}
+.team-member p {
+  font-family: UEFA Supercup;
 }
 
 .team-member figcaption {
@@ -156,9 +162,14 @@ a:hover{
   width:500px;
   height: 500px;
  }
-  
  .team-member figcaption p{
   font-size: 10px;
+ }
+ .team-member h4{
+   font-family: UEFA Supercup;
+ }
+ .team-member p{
+   font-family: UEFA Supercup;
  }
 }
 .team-member figure img{
