--- a/css/main.css
+++ b/css/main.css
@@ -41,10 +41,15 @@
   /* Microsoft Edge */
   color: #777777;
   font-weight: 300; }
-
+@font-face {
+  font-family: 'MyWebFont';
+ 
+  src: url('UEFASupercup.ttf')  format('truetype'), /* Safari, Android, iOS */
+      
+}
 body {
   color: #777777;
-  font-family: "Roboto", sans-serif;
+  font-family: 'MyWebFont', Fallback, sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.625em;
@@ -3346,7 +3351,6 @@ a.button1{
  border-radius:0.12em;
  box-sizing: border-box;
  text-decoration:none;
- font-family:'Roboto',sans-serif;
  font-weight:300;
  color:#FFFFFF;
  text-align:center;
@@ -3420,3 +3424,17 @@ a.button1:hover{
   width: 280px;
   height: 280px;
 }}
+
+@media (max-width: 991px) {
+  .fero span{
+    font-size: 1px;
+  }
+  .fero{
+    margin-left: 25%;
+    border-radius: 10px;
+  }
+}
+.fero{
+  height: 80px;
+  width: 200px
+}
