--- a/team3/css/style.css
+++ b/team3/css/style.css
@@ -9,10 +9,16 @@ body {
 }
 
 body {
-  font-family:UEFA Supercup;
+  font-family:'MyFont';
   font-weight: 300;
   color: #999;
   background-color: #fff;
+}
+@font-face {
+  font-family: 'MyFont';
+ 
+  src: url(''MyFont'Regular.ttf') /* Safari, Android, iOS */
+      
 }
 
 h1,
@@ -22,10 +28,10 @@ h4,
 h5,
 h6 {
   margin: 0 0 20px 0;
-  font-family: UEFA Supercup;
+  font-family: 'MyFont';
   text-transform: none;
   color: rgba(254, 82, 76, 1);
-  font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
+ 
   font-weight: 600;
   letter-spacing: 1px;
   line-height: 1.5;
@@ -67,7 +73,7 @@ a:hover{
 
 .team-member figcaption p {
   font-size: 16px;
-  font-family: UEFA Supercup;
+  font-family: 'MyFont';
 }
 
 .team-member figcaption ul {
@@ -92,10 +98,10 @@ a:hover{
 .team-member h4 {
   margin: 10px 0 0;
   padding: 0;
-  font-family: UEFA Supercup;
+  font-family: 'MyFont';
 }
 .team-member p {
-  font-family: UEFA Supercup;
+  font-family: 'MyFont';
 }
 
 .team-member figcaption {
@@ -166,10 +172,10 @@ a:hover{
   font-size: 10px;
  }
  .team-member h4{
-   font-family: UEFA Supercup;
+   font-family: 'MyFont';
  }
  .team-member p{
-   font-family: UEFA Supercup;
+   font-family: 'MyFont';
  }
 }
 .team-member figure img{
