--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,7 @@
 @font-face {
   font-family: 'MyWebFont';
  
-  src: url('UEFASupercup.ttf')  format('truetype'), /* Safari, Android, iOS */
+  src: url('UEFASupercup-Regular.ttf') /* Safari, Android, iOS */
       
 }
 body {
@@ -1747,12 +1747,20 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Poppins", sans-serif;
   text-transform: capitalize;
   outline: none; }
+@media (max-width: 1200px) and (min-width: 800px) {
+  .nav-menu a {
+   /* margin: 0 -30px; */
+  }
+  #nav-menu-container {
+  }
+}
+
   .nav-menu a:last-child a {
     margin-right: 0;
     padding-right: 0; }
 
 .nav-menu ul {
-  margin: 24px 0 0 26px;
+  margin: 22px 0 0 26px;
   padding: 10px;
   box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
   background: #fff;
@@ -1761,11 +1769,11 @@ h1, h2, h3, h4, h5, h6 {
 .nav-menu ul li {
   transition: 0.3s; }
   .nav-menu ul li > a {
-    padding: 10px;
+    padding: 0px;
     color: black;
     transition: 0.3s;
     display: block;
-    font-size: 12px;
+    font-size: 2px;
     text-transform: none; }
   .nav-menu ul li:hover a {
     
@@ -1793,7 +1801,7 @@ h1, h2, h3, h4, h5, h6 {
   transition: all 0.4s;
   outline: none;
   cursor: pointer; }
-  @media (max-width: 767px) {
+  @media (max-width: 1200px) and (min-width: 948px){
     #mobile-nav-toggle {
       top: 22px;
        } }
@@ -1802,9 +1810,22 @@ h1, h2, h3, h4, h5, h6 {
   color: black;
   font-weight: 900; }
 
-@media (max-width: 960px) {
+@media (max-width: 1200px) and (min-width: 948px){
   #mobile-nav-toggle {
     display: inline; }
+  #logo{
+    margin-left: -300px;
+  }
+
+  #nav-menu-container {
+    display: none; } }
+
+@media (max-width: 947px){
+  #mobile-nav-toggle {
+    display: inline; }
+  #logo{
+    margin-left: 22px;
+  }
 
   #nav-menu-container {
     display: none; } }
