--- a/css/main.css
+++ b/css/main.css
@@ -1810,11 +1810,12 @@ h1, h2, h3, h4, h5, h6 {
   color: black;
   font-weight: 900; }
 
-@media (max-width: 1200px) and (min-width: 948px){
+@media (max-width: 3000px) and (min-width: 948px){
   #mobile-nav-toggle {
-    display: inline; }
+    display: inline;
+    margin-right: 42px }
   #logo{
-    margin-left: -300px;
+    margin-left: -430px;
   }
 
   #nav-menu-container {
@@ -1834,7 +1835,7 @@ h1, h2, h3, h4, h5, h6 {
   position: fixed;
   top: 0;
   padding-top: 18px;
-   padding-left: 18px;
+  padding-left: 18px;
   bottom: 0;
   z-index: 998;
   background: rgba(0, 0, 0, 0.8);
